DevTools: follow up to r548569, complete the tethering transition.

Bug: 837446
Change-Id: I8e2d61e50fe9bf800a1577642a458791fb777057
Reviewed-on: https://chromium-review.googlesource.com/1048401
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Pavel Feldman <pfeldman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557242}
Former-commit-id: 0fd6912160ccc39e038b04b748dc39b6e3e81fe3